crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_close_trigger.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&api.close_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "close-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Close panel",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
