crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_content_minimized.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&minimized.content_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
