crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_footer.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&api.footer_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "footer",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
    ],
    styles: [],
}
