crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_maximize_trigger_maximized.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&maximized.maximize_trigger_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-maximized",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "maximize-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Restore panel",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
