crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_resize_handle_e.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: "snapshot_attrs(&api.resize_handle_attrs(ResizeHandle::E))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-handle",
            ),
            String(
                "e",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "resize-handle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Resize right",
            ),
        ),
    ],
    styles: [
        (
            Cursor,
            "ew-resize",
        ),
    ],
}
